# cpp_cross_language_parallel_text

./: .gitignore  CMakeLists.txt  README.md  greek_abridged.tsv
.devcontainer/: Dockerfile  devcontainer.json
src/: fileParser.cpp  fileParser.hpp  logger.hpp  main.cpp  pmiAggregator.cpp  pmiAggregator.hpp  textUtils.hpp  tokenizer.hpp
